Fix to image pathing
Changed the pathing of the hero image to find correct directory
in image folder.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="hero-button" target="_blank">Sign up</a>
         </div>
         <div class="hero-img">
-            <img src="/images/pexels-francesco-ungaro-96428.jpg" alt="Two cats sleeping on red blanket" width="500px" height="250px">
+            <img src=".../images/pexels-francesco-ungaro-96428.jpg" alt="Two cats sleeping on red blanket" width="500px" height="250px">
         </div>
     </div>
     
